Fixed queue-text alignment

--- a/css/queues.css
+++ b/css/queues.css
@@ -135,6 +135,8 @@
 
   padding-right: 10px;
 
+  text-align: left;
+
   /*Stays in one line and does not overflow*/
   text-overflow: ellipsis;
   white-space: nowrap;
